--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build:prod": "webpack --mode=production",
     "build:dev": "webpack --mode=development",
     "watch": "webpack --watch --mode=development",
+    "start": "webpack serve --mode development",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -32,7 +33,8 @@
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.6",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
     "jquery": "^3.6.1",
